--- a/powersearch/src/components/search/CtSearch.scss
+++ b/powersearch/src/components/search/CtSearch.scss
@@ -13,6 +13,7 @@
       background-color: rgb(244, 244, 244);
       padding: 10px;
       margin-bottom: 10px;
+      box-sizing: border-box;
       img {
         display: block;
         width: 150px;
